Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/payments/03-payments-kic-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: payments-kic
    istio-injection: enabled
  name: payments-kic
