Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/payments/04-payments-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: payments-team
    istio-injection: enabled
  name: payments-team
