Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/payments/transfer-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-svc
  namespace: payments-team
spec:
  # type: LoadBalancer
  selector:
    app: transfer-svc
  ports:
    - port: 7071
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-svc
  namespace: payments-team
  labels:
    app: transfer-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-svc
  template:
    metadata:
      labels:
        app: transfer-svc
    spec:
      serviceAccountName: transfer-svc
      containers:
        - name: transfer-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
