Domain Specific Gateway As Cluster-IP Internally With Global Gateway For Outsider/apps/payments/01-payments-kong-api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: payments-kong-api-gateway
  namespace: payments-kic
spec:
  gatewayClassName: payments-kong-gatewayclass
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: payments-team
